Start new design

--- a/docs/_includes/join-form.haml
+++ b/docs/_includes/join-form.haml
@@ -1,15 +1,15 @@
-%form.join-form{action: '#', method: 'POST'}
+%form.join-form.fill-white.p-large.radius6.elevation1.m-l-r-auto{action: '#', method: 'POST'}
   %h3 Get Started. It’s Forever FREE!
   .spacer20
   .input-group
     %span.input-group-addon
-      %i.fa.fa-fw.fa-globe
+      %i.icon.icon-link
     %input.form-control{type: 'text', placeholder: 'https://website.com/doc', name: 'url'}
   %p.text-sm We’ll crawl the <u>documentation pages</u> of your website and index them on Algolia.
   .spacer10
   .input-group
     %span.input-group-addon
-      %i.fa.fa-fw.fa-envelope-o
+      %i.icon.icon-email
     %input.form-control{type: 'email', placeholder: 'you@example.org', name: 'email'}
   %p.text-sm We’ll email you the code you need to integrate the search into your documentation.
   %p.checkbox.text-center
@@ -18,8 +18,8 @@
       %span I'm the <u>owner</u> of that website
   .spacer20
   .text-center
-    %button.btn.btn-primary.btn-lg{type: 'submit'}
-      JOIN THE PROGRAM!
+    %button.btn.btn-static-primary{type: 'submit'}
+      Join the program
 
 %form.join-form.join-form-validated
   %h3 Thank you !
