--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -88,7 +88,7 @@
         
       </li>
       <li class="algc-menu__list__item ">
-        <a href="/docsearch/about"  class="">
+        <a href="https://algolia.com/about"  class="">
           About
           
         </a>
@@ -125,33 +125,33 @@
   </li>
   <li>
     <div class="dropdown-item">
-      <a href="https://community.algolia.com/wordpress" >
-        <span class="item-icon" style="background: linear-gradient(to bottom right, #4041B2, #516ED1)"><img src="https://community.algolia.com/wordpress/img/icons/wp-icon.svg" alt="wordpress"/></span>
-        <h4>wordpress</h4>
+      <a href="https://github.com/algolia/vue-instantsearch/" >
+        <span class="item-icon" style="background: linear-gradient(to right, #4DBA87, #2F9088)"><img src="http://res.cloudinary.com/hilnmyskv/image/upload/v1500619122/instantsearch-icon_white.svg" alt="Vue InstantSearch"/></span>
+        <h4>Vue InstantSearch</h4>
       </a>
     </div>
   </li>
   <li>
     <div class="dropdown-item">
-      <a href="https://github.com/algolia/autocomplete.js" >
-        <span class="item-icon" style="background: #00587f"><img src="https://community.algolia.com/img/illus-autocomplete.svg" alt="Autocomplete.js"/></span>
-        <h4>Autocomplete.js</h4>
+      <a href="https://community.algolia.com/instantsearch-android/" >
+        <span class="item-icon" style="background: linear-gradient(112deg, #21c7d0, #2dde98)"><img src="http://res.cloudinary.com/hilnmyskv/image/upload/v1500619122/instantsearch-icon_white.svg" alt="InstantSearch Android"/></span>
+        <h4>InstantSearch Android</h4>
       </a>
     </div>
   </li>
   <li>
     <div class="dropdown-item">
       <a href="https://community.algolia.com/instantsearch.js/" >
-        <span class="item-icon" style="background: #385D72"><img src="https://community.algolia.com/img/logo-is.svg" alt="instantsearch.js"/></span>
+        <span class="item-icon" style="background: #fecf50"><img src="http://res.cloudinary.com/hilnmyskv/image/upload/v1500619122/instantsearch-icon_black.svg" alt="instantsearch.js"/></span>
         <h4>instantsearch.js</h4>
       </a>
     </div>
   </li>
   <li>
     <div class="dropdown-item">
-      <a href="https://community.algolia.com/algoliasearch-helper-js/" >
-        <span class="item-icon" style="background: #FDBD57"><img src="https://community.algolia.com/img/logo-helper.svg" alt="Helper.js"/></span>
-        <h4>Helper.js</h4>
+      <a href="https://community.algolia.com/instantsearch-ios" >
+        <span class="item-icon" style="background: linear-gradient(to top left, #D8EE34, #02ADE6, #033DF1)"><img src="http://res.cloudinary.com/hilnmyskv/image/upload/v1500619122/instantsearch-icon_white.svg" alt="InstantSearch iOS"/></span>
+        <h4>InstantSearch iOS</h4>
       </a>
     </div>
   </li>
@@ -193,7 +193,7 @@
         </a>
       </li>
       <li class="algc-mobilemenu__item">
-        <a href="/docsearch/about" >
+        <a href="https://algolia.com/about" >
           About
         </a>
       </li>
@@ -201,11 +201,6 @@
         <a href="https://github.com/algolia/docsearch/" target=_blank>
           <img src='/docsearch/img/icon-github.svg'/>
           Github
-        </a>
-      </li>
-      <li class="algc-mobilemenu__item">
-        <a href="https://discourse.algolia.com/c/docsearch" target=_blank>
-          Discourse
         </a>
       </li></ul></div></div>
 
