--- a/docs/css/_mixin.scss
+++ b/docs/css/_mixin.scss
@@ -16,3 +16,9 @@
   @keyframes #{$animation-name} {
     @content; } }
 
+@mixin placeholder {
+  &::-webkit-input-placeholder {@content}
+  &:-moz-placeholder           {@content}
+  &::-moz-placeholder          {@content}
+  &:-ms-input-placeholder      {@content}
+}
