--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container main-content m800 m-l-r-auto">
+<div class="container main-content m800 m-l-r-auto {{page.className}}">
   <header class="page-header">
     <h1 class="page-title">{{ page.title }}</h1>
   </header>
