chore(deps): upgrade to Jekyll 3

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" media="screen" href="{{ "/css/main.css" | prepend: site.baseurl }}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css">
   </head>
-    <body class="{{page.className || page.title}}">
+    <body class="{{page.className}} {{page.title}}">
 
     {% include header.html %}
 
